hydroflow/tests/compile-fail/surface_lattice_merge_wronggeneric.stderr
error[E0271]: expected `Drain<'_, {integer}>` to be an iterator that yields `HashSet<u32>`, but it yields `{integer}`
 --> tests/compile-fail/surface_lattice_merge_wronggeneric.rs:5:9
  |
5 |         source_iter([1,2,3,4,5])
  |         ^^^^^^^^^^^^^^^^^^^^^^^^ expected `HashSet<u32>`, found integer
6 |             -> lattice_merge::<'static, hydroflow::lang::lattice::set_union::SetUnionRepr<hydroflow::lang::tag::HASH_SET, u32>>()
  |                                         -------------------------------------------------------------------------------------- required by a bound introduced by this call
  |
  = note: expected struct `HashSet<u32>`
               found type `{integer}`
note: required by a bound in `check_inputs`
 --> tests/compile-fail/surface_lattice_merge_wronggeneric.rs:6:41
  |
6 |             -> lattice_merge::<'static, hydroflow::lang::lattice::set_union::SetUnionRepr<hydroflow::lang::tag::HASH_SET, u32>>()
  |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `check_inputs`
